# nix-templates

./: flake.nix
c/: .clang-tidy  .gitignore  CMakeLists.txt  Justfile  flake.nix
c/include/: mylib.h
c/src/: main.c  mylib.c
c/tests/: my_test.c
chisel/: .gitignore  build.sbt  flake.nix
default/: flake.nix
go/: .gitignore  flake.nix  go.mod
python/: .gitignore  flake.nix
risc/: flake.nix
rust/: .gitignore  flake.nix
zig/: .gitignore  flake.nix
